--- a/home/css/style.css
+++ b/home/css/style.css
@@ -58,3 +58,54 @@ h2 {
           transform: scale(1.1);
 }
 
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+    height: 100%;
+    color: #777;
+    line-height: 1.8;
+}
+#loading {
+    position: absolute; width: 100%; height: 100%; background: url('/home/nandukmg/Documents/BhoomitraSena Website/home/load.gif') no-repeat center center;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/167792/mountains_copy.jpg');
+    min-height: 100%;
+}
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+    background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/167792/mountains_copy.jpg");
+    min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+
+    background-image: url("/home/nandukmg/Documents/BhoomitraSena Website/home/flower.jpg");
+    min-height: 400px;
+    min-width: 100%;
+}
+
+.w3-wide {letter-spacing: 10px;width: 100%;}
+.w3-hover-opacity {cursor: pointer;}
+.w3-content {
+    max-width: 100%;
+    margin: auto;
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
+}
