--- a/home/css/style.css
+++ b/home/css/style.css
@@ -65,7 +65,7 @@ body, html {
     line-height: 1.8;
 }
 #loading {
-    position: absolute; width: 100%; height: 100%; background: url('/home/nandukmg/Documents/BhoomitraSena Website/home/load.gif') no-repeat center center;
+    position: absolute; width: 100%; height: 100%; background: url('/BhoomitraSena/home/load.gif') no-repeat center center;
 }
 
 /* Create a Parallax Effect */
