Font size made responsive!

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -108,4 +108,17 @@ body, html {
     .bgimg-1, .bgimg-2, .bgimg-3 {
         background-attachment: scroll;
     }
+  h1 {
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  color: white;
+  font-size: 3.5em;
+  text-align: center;
+  text-transform: uppercase;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+}
 }
